applied minor fixes for contact component on small viewport

--- a/src/style/custom-style.css
+++ b/src/style/custom-style.css
@@ -643,7 +643,12 @@ header h3 {
   .contact__media svg {
     font-size: 55px !important;
   }
-
+  .contact__media:hover {
+    transform: scale(1) !important;
+  }
+  .contact__media-wrapper :nth-child(3) svg {
+    font-size: 53px !important;
+  }
   /* ---------------- footer --------------- */
   footer {
     text-align: center;
